syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package MoodyAPI;

option go_package = "api.mooody.me/api/pb";
option optimize_for = LITE_RUNTIME;

message Auth
{
    string clientId = 1;
}

service MoodyAPIService
{
    rpc UpdateCameraState(UpdateCameraStateRequest) returns (google.protobuf.Empty);
    rpc SubscribeCameraStateChange(SubscribeCameraStateChangeRequest) returns (stream CameraState);

    rpc SendNotification(SendNotificationRequest) returns (google.protobuf.Empty);
    rpc SubscribeNotifications(SubscribeNotificationsRequest) returns (stream Notification);

    // Privileged RPCs
    rpc ListClients(ListClientsRequest) returns (ListClientsResponse);
    rpc UpdateClientInfo(UpdateClientInfoRequest) returns (UpdateClientInfoResponse);
}

message APIClient
{
    int64 id = 1;
    string name = 2;
    string uuid = 3;
    bool privileged = 4;
    google.protobuf.Timestamp lastSeen = 5;
    bool enabled = 6;
}

message ListClientsRequest
{
    Auth auth = 1;
}

message ListClientsResponse
{
    bool success = 1;
    repeated APIClient clients = 2;
}

message UpdateClientInfoRequest
{
    Auth auth = 1;
    APIClient clientInfo = 2;
}

message UpdateClientInfoResponse
{
    bool success = 1;
}

message CameraState
{
    bool state = 1;
}

message SubscribeCameraStateChangeRequest
{
    Auth auth = 1;
}

message UpdateCameraStateRequest
{
    Auth auth = 1;
    CameraState state = 2;
}

message SubscribeNotificationsRequest
{
    Auth auth = 1;
    int32 channelID = 2;
}

message SendNotificationRequest
{
    Auth auth = 1;
    Notification notification = 2;
}

message Notification
{
    google.protobuf.Timestamp time = 1;
    int32 channelId = 2;
    string title = 3;
    string message = 4;
    string icon = 5;
}
