syntax = "proto3";

package light;
import "common/common.proto";

option go_package = "api.mooody.me/models/light";

message SetLightRequest
{
    common.Auth auth = 1;
    LightState state = 2;
}

message SetLightResponse
{
}

message LightColor
{
    uint32 red = 1;
    uint32 green = 2;
    uint32 blue = 3;
}

message LightState
{
    bool on = 1;
    uint32 brightness = 2;
    oneof mode
    {
        bool warmwhite = 3;
        LightColor colored = 4;
    }
}

message SubscribeLightRequest
{
    common.Auth auth = 1;
}
